# Claude-Recall

./: .coderabbit.yaml  .gitignore  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml
core/src/claude_recall/: config.py  message_cache.py  models.py  server.py  state_machine.py
core/src/claude_recall/transports/: push.py  websocket.py
core/tests/: conftest.py  test_cascade_integration.py  test_frame_schema.py  test_ingest_endpoint.py  test_message_cache.py  test_rules.py  test_server.py  test_session_registry.py  test_state_machine.py
docs/: multi-host-roadmap.md  multi-host.md  protocol.md
receivers/web-dashboard/src/: App.tsx  Legend.tsx  ShopWindow.tsx  index.css  types.ts  useRecall.ts
