[project]
name = "claude-recall-workspace"
version = "0.1.0"
description = "Claude Recall monorepo workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "claude-recall",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.uv.sources]
claude-recall = { workspace = true }

[tool.uv.workspace]
members = ["core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/tests"]
